--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -114,18 +114,35 @@ jobs:
           Write-Output "SOLUTION_DIRECTORY=$($solution_file.DirectoryName)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append  
 
           $repoFullName = "${{ github.repository }}"
-          $repoName = $repoFullName.Split('/')[-1]
+          $repoName = $repoFullName.Split('/')[1]
           $makeModelParts = $repoName -split '-'
-          if ($makeModelParts.Length -ge 2) {
-              $make = ($makeModelParts[1] -join '').Replace(' ', '')
-          } else {    
-              # Fallback to the first part
-              $make = $makeModelParts[0].Replace(' ', '')
+          if (-not $makeModelParts) {
+              Write-Error "Error: \$makeModelParts is null or empty."
           }
-          if ($makeModelParts.Length -gt 2) {
-              $model = ($makeModelParts[2..($makeModelParts.Length - 1)] -join '').Replace(' ', '')
-          } else {    
-              $model = $makeModelParts[1].Replace(' ', '')
+          else {
+              Write-Output "Number of items in \$($makeModelParts): $($makeModelParts.Count)"
+              switch ($makeModelParts.Count) {
+                  1 {
+                      # org/repoName
+                      $make = $makeModelParts[0].Replace(' ', '')
+                      $model = ''
+                  }
+                  2 {
+                      # org/repo-name
+                      $make = $makeModelParts[0].Replace(' ', '')
+                      $model = $makeModelParts[1].Replace(' ', '')
+                  }
+                  3 {
+                      # org/epi-make-model
+                      $make = $makeModelParts[1].Replace(' ', '')
+                      $model = ($makeModelParts[2..($makeModelParts.Count - 1)] -join '').Replace(' ', '')
+                  }
+                  Default {
+                      # $make = $makeModelParts[0].Replace(' ', '')
+                      # $model = ($makeModelParts[1..($makeModelParts.Count - 1)] -join '').Replace(' ', '')
+                      Write-Error "Error: Unexpected number of items in \$($makeModelParts): $($makeModelParts.Count)"
+                  }
+              }
           }
 
           # TODO [ ] review for standardization - original title implementation
