--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -145,25 +145,31 @@ jobs:
               }
           }
 
-          # TODO [ ] review for standardization - original title implementation
-          $title = (Get-Culture).TextInfo.ToTitleCase("$make") + (Get-Culture).TextInfo.ToTitleCase("$model")
-          # TODO [ ] review for standardization - 4series uses `$make.$model`
-          #$title = (Get-Culture).TextInfo.ToTitleCase("$make.$model")
-
-          # TODO [ ] review for standardization - 4series build uses `Plugins`
-          $package = "PepperDash.Essentials.Plugin." + ($title -replace ' ', '')
+          if($model -eq '') {
+              # assume non-plugin repo && name override is automatically generated
+              $title = $make
+              $package = $title -replace ' ', ''
+          }
+          else {
+              # TODO [ ] review for standardization - original title implementation
+              $title = (Get-Culture).TextInfo.ToTitleCase("$make") + (Get-Culture).TextInfo.ToTitleCase("$model")
+              
+              # TODO [ ] review for standardization - 4series uses `$make.$model`
+              #$title = (Get-Culture).TextInfo.ToTitleCase("$make.$model")
+              
+              # TODO [ ] review for standardization - 4series build uses `Plugins`
+              $package = "PepperDash.Essentials.Plugin." + ($title -replace ' ', '')
+          }
 
           Write-Output "Repo Full Name: $repoFullName"
           Write-Output "Repo Name: $repoName"
-          Write-Output "EPI Make: $make"
-          Write-Output "EPI Model: $model"
-          Write-Output "EPI Title: $title"
-          Write-Output "EPI Package: $package"
+          Write-Output "Make: $make"
+          Write-Output "Model: $model"
+          Write-Output "Title: $title"
+          Write-Output "Package: $package"
 
           Write-Output "REPO_FULL_NAME=$repoFullName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           Write-Output "REPO_NAME=$repoName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          Write-Output "EPI_MAKE=$make" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          Write-Output "EPI_MODEL=$model" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           Write-Output "EPI_TITLE=$title" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           Write-Output "EPI_PACKAGE=$package" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
                   
@@ -182,11 +188,12 @@ jobs:
           # GitHub Actions environment variables
           $sourceDir = "$Env:GITHUB_WORKSPACE" 
           $destinationDir = "$Env:GITHUB_WORKSPACE\output"
+          $package = $Env:EPI_PACKAGE
           $version = $Env:VERSION
 
           # Define the target file extensions (with leading dot)
           $validExtensions = @(".cpz", ".clz", ".cplz")
-          
+                    
           # Create the include patterns for Get-ChildItem -Include
           $includePatterns = $validExtensions | ForEach-Object { "*$_" }
 
@@ -194,6 +201,7 @@ jobs:
           Write-Output "Include Patterns: $($includePatterns -join ', ')"
           Write-Output "Source Directory: $sourceDir"
           Write-Output "Destination Directory: $destinationDir"
+          Write-Output "Package Name: $package"
           Write-Output "Version: $version"
 
           # Create the destination directory if it doesn't exist.
@@ -202,11 +210,16 @@ jobs:
           Write-Output "`n"
           Write-Output "Source Directory Contents:"
           Get-ChildItem -Path $sourceDir | ForEach-Object { Write-Output $_.FullName }
+          Write-Output "`n"
+          Write-Output "\bin\$($env:BUILD_TYPE) Directory Contents:"
+          Get-ChildItem -Path $sourceDir -Recurse | Where-Object { 
+              $_.FullName -match "\\bin\\$($Env:BUILD_TYPE)" 
+          } | ForEach-Object { Write-Output $_.FullName }
 
           # Find files recursively in the source directory with the specified extensions
           # $filesToCopy = Get-ChildItem -Path $sourceDir -Recurse -Include $includePatterns | Where-Object { -not $_.FullName.Contains("\packages\") }
           $filesToCopy = Get-ChildItem -Path $sourceDir -Recurse -Include $includePatterns | Where-Object { 
-            -not $_.FullName.Contains("\packages\") -and $_.FullName -match "\\bin\\$($Env:BUILD_TYPE)" 
+              -not $_.FullName.Contains("\packages\") -and $_.FullName -match "\\bin\\$($Env:BUILD_TYPE)" 
           }
 
           # Create a list to store all files to copy, including matching base name files
@@ -220,11 +233,14 @@ jobs:
               # Add the current file to the list
               $allFilesToCopy += $file
 
-              # Search for any files in $sourceDir with a matching base name
+              # Search for any files in $sourceDir with a matching base name or matching the EPI package name
               $matchingFiles = Get-ChildItem -Path $sourceDir -Recurse | Where-Object { 
-                  $_.BaseName -eq $baseName -and $_.Extension -eq ".dll" 
+                  ($_.BaseName -eq $baseName -or $_.BaseName -eq $package) -and $_.Extension -eq ".dll" 
               }
-              
+
+              # Add the matching files to the list
+              $allFilesToCopy += $matchingFiles
+
               # Add the matching files to the list
               $allFilesToCopy += $matchingFiles
           }
@@ -251,12 +267,13 @@ jobs:
           Write-Output "Renaming files in $destinationDir to include version '$version'..."
 
           # Rename the copied files in the destination directory
-          Get-ChildItem -Path $destinationDir | ForEach-Object {
+          $validExtensions += @(".dll")
+          Get-ChildItem -Path $destinationDir | Where-Object { $validExtensions -contains $_.Extension } | ForEach-Object {
               $oldName = $_.Name
               $baseName = $_.BaseName
               $extension = $_.Extension # Includes the dot (.)
               $newName = "$baseName.$version$extension" -Replace '.3Series', ''
-              
+                        
               Write-Output "- '$oldName' to '$newName'"    
               Rename-Item -Path $_.FullName -NewName $newName -Force 
           }
