--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -195,6 +195,7 @@ jobs:
           $destinationDir = "$Env:GITHUB_WORKSPACE\output"
           $package = $Env:EPI_PACKAGE
           $version = $Env:VERSION
+          $plugin = ($Env:REPO_IS_PLUGIN).ToLower()
 
           # Define the target file extensions (with leading dot)
           $validExtensions = @(".cpz", ".clz", ".cplz")
@@ -208,6 +209,7 @@ jobs:
           Write-Output "Destination Directory: $destinationDir"
           Write-Output "Package Name: $package"
           Write-Output "Version: $version"
+          Write-Output "Plugin: $plugin"
 
           # Create the destination directory if it doesn't exist.
           New-Item -ItemType Directory -Force -Path $destinationDir
@@ -215,6 +217,22 @@ jobs:
           Write-Output "`n"
           Write-Output "Source Directory Contents:"
           Get-ChildItem -Path $sourceDir | ForEach-Object { Write-Output $_.FullName }
+
+          if($plugin -eq 'False') {
+              Write-Output "`n"
+              Write-Output "Searching for nuspec files in $sourceDir..."
+              # Search the $sourceDir for any file with extension *.nuspec and copy to the $destinationDir
+              Get-ChildItem -Path $sourceDir -Recurse | Where-Object { 
+                  $_.Extension -eq ".nuspec" 
+              } | ForEach-Object {
+                  Write-Output "Copying $($_.Name) to $destinationDir"
+                  $_ | Copy-Item -Destination $destinationDir -Force
+                  $nuspec_file = $_.BaseName
+                  Write-Output "Nuspec File: $nuspec_file"
+                  Write-Output "NUSPEC_FILE=$($nuspec_file)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+              }
+          }
+
           Write-Output "`n"
           Write-Output "\bin\$($env:BUILD_TYPE) Directory Contents:"
           Get-ChildItem -Path $sourceDir -Recurse | Where-Object { 
