fix(workflow): refine solution file handling and improve output directory management

--- a/.github/workflows/essentials-3Series-builds.yml
+++ b/.github/workflows/essentials-3Series-builds.yml
@@ -101,19 +101,20 @@ jobs:
         shell: pwsh
         run: |
           $workspace = $Env:GITHUB_WORKSPACE
-          $solution_filter = "*.3Series.sln"
+          $filter = "*.3Series.sln"
 
-          $solution_file = Get-ChildItem -Path $workspace -Filter $solution_filter -Recurse
+          $solution_file = Get-ChildItem -Path $workspace -Filter $filter -Recurse
 
           Write-Output "Solution File: $($solution_file.BaseName)"
           Write-Output "Solution Path: $($solution_file.Name)"
           Write-Output "Solution Directory: $($solution_file.DirectoryName)"
 
           Write-Output "SOLUTION_FILE=$($solution_file.BaseName)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          Write-Output "SOLUTION_PATH=$($solution_file.Name)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append  
-          Write-Output "SOLUTION_DIRECTORY=$($solution_file.DirectoryName)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append  
+          Write-Output "SOLUTION_PATH=$($solution_file.Name)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Output "SOLUTION_DIR=$($solution_file.DirectoryName)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
-          $repoFullName = "${{ github.repository }}"
+          # WIP - Move file naming to this section
+          # $repoFullName = "${{ github.repository }}"
           $repoName = $repoFullName.Split('/')[-1]
 
           Write-Output "Repo Full Name: $repoFullName"
@@ -140,66 +141,75 @@ jobs:
           # GitHub Actions environment variables
           $sourceDir = "$Env:GITHUB_WORKSPACE" 
           $destinationDir = "$Env:GITHUB_WORKSPACE\output"
-          $title = $Env:EPI_TITLE
           $package = $Env:EPI_PACKAGE
-          $version = $Env:VERSION          
+          $version = $Env:VERSION
+          $plugin = ($Env:REPO_IS_PLUGIN).ToLower()
+          $buildDir = "\\bin\\"
 
           # Define the target file extensions (with leading dot)
           $validExtensions = @(".cpz", ".clz")
-                    
+
           # Create the include patterns for Get-ChildItem -Include
-          $includePatterns = $validExtensions | ForEach-Object { "*$_" }
+          $includePatterns = $validExtensions | ForEach-Object { "*$_" }                    
 
           Write-Output "Target File Extensions: $($validExtensions -join ', ')"
           Write-Output "Include Patterns: $($includePatterns -join ', ')"
           Write-Output "Source Directory: $sourceDir"
           Write-Output "Destination Directory: $destinationDir"
-          Write-Output "Title: $title"
           Write-Output "Package Name: $package"
-          Write-Output "Version: $version"          
+          Write-Output "Version: $version"
+          Write-Output "Plugin: $plugin"
           Write-Output "`n"
 
           # Create the destination directory if it doesn't exist.
-          Write-Output "Creating destination directory if it doesn't exist..."
           if (Test-Path -Path $destinationDir) {
-              Write-Output "Destination directory already exists. Deleting contents..."
+              Write-Output "Destination '$destinationDir' already exists. Deleting contents..."
               Get-ChildItem -Path $destinationDir | Remove-Item -Force
               Write-Output "`n"
           }
           else {
-              Write-Output "Destination directory does not exist. Creating it..."
+              Write-Output "Destination '$destinationDir' does not exist. Creating it..."
               New-Item -ItemType Directory -Force -Path $destinationDir
               Write-Output "`n"
           }
-          
+
+          switch -Wildcard ($env:REPO_FULL_NAME.ToLower()) {
+              "pepperdash/essentials" {
+                  $validExtensions += @(".dll")
+                  $includePatterns += @("*.dll")
+              }
+              "pepperdash/pepperdashcore" {
+                  
+              }
+          }
 
           Write-Output "`n"
           Write-Output "Source Directory Contents:"
           Get-ChildItem -Path $sourceDir | ForEach-Object { Write-Output $_.FullName }
 
-
-          Write-Output "`n"
           Write-Output "Searching for nuspec files in $sourceDir..."
           # Search the $sourceDir for any file with extension *.nuspec and copy to the $destinationDir
           Get-ChildItem -Path $sourceDir -Recurse | Where-Object { 
               $_.Extension -eq ".nuspec" 
           } | ForEach-Object {
-              Write-Output "Copying $($_.Name) to .\"
-              $_ | Copy-Item -Destination .\ -Force
+              Write-Output "Copying $($_.Name) to $destinationDir"
+              $_ | Copy-Item -Destination $destinationDir -Force
               $nuspec_file = $_.BaseName
               Write-Output "Nuspec File: $nuspec_file"
               Write-Output "NUSPEC_FILE=$($nuspec_file)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          }          
+          }
 
           Write-Output "`n"
-          Write-Output "\bin\$($env:BUILD_TYPE) Directory Contents:"
-          Get-ChildItem -Path $sourceDir -Recurse | Where-Object { 
-              $_.Name -match $title -or $_.Name -match $package
+          Write-Output "$sourceDir Directory Contents:"
+          Get-ChildItem -Path "$sourceDir" -Recurse | Where-Object { 
+              # $_.FullName -contains "$($buildDir -replace '\\', '\\\\')" -and $_.FullName -notmatch "\\packages\\" -and $validExtensions -contains $_.Extension
+              $_.FullName -notmatch "\\packages\\" -and $validExtensions -contains $_.Extension
           } | ForEach-Object { Write-Output $_.FullName }
 
-          # Find files recursively in the source directory with the specified extensions          
+          # Find files recursively in the source directory with the specified extensions
+          # $filesToCopy = Get-ChildItem -Path $sourceDir -Recurse -Include $includePatterns | Where-Object { -not $_.FullName.Contains("\packages\") }
           $filesToCopy = Get-ChildItem -Path $sourceDir -Recurse -Include $includePatterns | Where-Object { 
-              -not $_.FullName.Contains("\packages\") -and $_.Name -match $title -or $_.Name -match $package
+              -not $_.FullName.Contains("\\packages\\") -and $_.FullName -match "$buildDir" 
           }
 
           # Create a list to store all files to copy, including matching base name files
@@ -211,7 +221,18 @@ jobs:
               $baseName = $file.BaseName
 
               # Add the current file to the list
-              $allFilesToCopy += $file              
+              $allFilesToCopy += $file
+
+              # Search for any files in $sourceDir with a matching base name or matching the EPI package name
+              $matchingFiles = Get-ChildItem -Path $sourceDir -Recurse | Where-Object { 
+                  $_.BaseName -eq $baseName -and $_.Extension -eq ".dll" 
+              }
+
+              # Add the matching files to the list
+              $allFilesToCopy += $matchingFiles
+
+              # Add the matching files to the list
+              $allFilesToCopy += $matchingFiles
           }
 
           Write-Output "`n"
@@ -235,16 +256,21 @@ jobs:
           Write-Output "`n"
           Write-Output "Renaming files in $destinationDir to include version '$version'..."
 
+          $validExtensions.Clear()
+          $validExtensions += @(".cpz", ".clz")
           # Rename the copied files in the destination directory
-          $validExtensions += @(".dll")
+          Write-Host "Valid Extensions: $($validExtensions -join ', ')"
           Get-ChildItem -Path $destinationDir | Where-Object { $validExtensions -contains $_.Extension } | ForEach-Object {
-              $oldName = $_.Name
-              $baseName = $_.BaseName
-              $extension = $_.Extension # Includes the dot (.)
-              $newName = "$baseName.$version$extension" -Replace '.3Series', ''
-                        
-              Write-Output "- '$oldName' to '$newName'"    
-              Rename-Item -Path $_.FullName -NewName $newName -Force 
+              if($_.Name -match "PepperDashEssentials" -or $_.Name -match "PepperDashCore" -or $_.Name -match "PepperDash_Core") {        
+                  # Remove the version number from the file name
+                  $oldName = $_.Name
+                  $baseName = $_.BaseName
+                  $extension = $_.Extension # Includes the dot (.)
+                  $newName = "$baseName.$version$extension" -Replace '.3Series', ''
+                                      
+                  Write-Output "- '$oldName' to '$newName'"    
+                  Rename-Item -Path $_.FullName -NewName $newName -Force    
+              }
           }
 
           Write-Output "`n"
