--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -430,15 +430,14 @@ jobs:
           Write-Output "Repository Owner: $owner"
           Write-Output "Repository Visibility: $visibility"
 
-          if ($owner.ToLower() -notlike '*pepperdash*' -or $visibility.ToLower() -ne 'public') {
-            Write-Error "Repository is not public, skipping publishing to NuGet.org." | Add-Content -Path $env:GITHUB_STEP_SUMMARY
-            exit 0
+          if ($owner.ToLower() -ne 'pepperdash' -or $visibility.ToLower() -ne 'public') {
+            Write-Warning "Repository is not public, skipping publishing to NuGet.org." | Add-Content -Path $env:GITHUB_STEP_SUMMARY
           }
           else {
             if (-not (Test-Path -Path ".\output\*.nupkg")) {
               $msg = "No NuGet package found in the output directory. Check if the build process created the package correctly."
               Write-Error $msg | Add-Content -Path $env:GITHUB_STEP_SUMMARY
-              exit 1
+              exit 0
             }
             
             Write-Output "Publishing ${{ github.repository }} to NuGet.org" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
