--- a/.github/workflows/essentialsplugins-3Series-builds-selfhosted.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds-selfhosted.yml
@@ -1,4 +1,4 @@
-name: Essentials Build 3-Series Self-Hosted Runner
+name: Essentials Plugin Build 3-Series
 
 on:
   workflow_call:
@@ -24,9 +24,8 @@ permissions:
   packages: write
 jobs:
   Build_Project_3-Series:
-    # runs-on: [self-hosted, Windows, X64]
     runs-on: 
-        group: dmz-windows-2019
+      group: dmz-windows-2019
     env:
       VERSION: ${{ inputs.version }}
       BUILD_TYPE: ${{ inputs.channel == '' && 'Release' || 'Debug' }}
@@ -103,30 +102,83 @@ jobs:
         shell: pwsh
         run: |
           $workspace = $Env:GITHUB_WORKSPACE
-          $filter = "*.3Series.sln"
+          $solution_filter = "*.3Series.sln"
 
-          $solution_file = Get-ChildItem -Path $workspace -Filter $filter -Recurse -Exclude "packages"
+          $solution_file = Get-ChildItem -Path $workspace -Filter $solution_filter -Recurse
 
           Write-Output "Solution File: $($solution_file.BaseName)"
           Write-Output "Solution Path: $($solution_file.Name)"
           Write-Output "Solution Directory: $($solution_file.DirectoryName)"
 
           Write-Output "SOLUTION_FILE=$($solution_file.BaseName)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          Write-Output "SOLUTION_PATH=$($solution_file.Name)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          Write-Output "SOLUTION_DIR=$($solution_file.DirectoryName)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Output "SOLUTION_PATH=$($solution_file.Name)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append  
+          Write-Output "SOLUTION_DIRECTORY=$($solution_file.DirectoryName)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append  
 
-          # WIP - Move file naming to this section
           $repoFullName = "${{ github.repository }}"
-          $repoName = $repoFullName.Split('/')[-1]
+          $repoName = $repoFullName.Split('/')[1]
+          $makeModelParts = $repoName -split '-'
+          if (-not $makeModelParts) {
+              Write-Error "Error: \$makeModelParts is null or empty."
+              exit 1
+          }
+          else {
+              Write-Output "Number of items in \$($makeModelParts): $($makeModelParts.Count)"
+              switch ($makeModelParts.Count) {
+                  1 {
+                      # org/repoName
+                      $make = $makeModelParts[0].Replace(' ', '')
+                      $model = ''
+                  }
+                  2 {
+                      # org/repo-name
+                      $make = $makeModelParts[0].Replace(' ', '')
+                      $model = $makeModelParts[1].Replace(' ', '')
+                  }
+                  3 {
+                      # org/epi-make-model
+                      $make = $makeModelParts[1].Replace(' ', '')
+                      $model = ($makeModelParts[2..($makeModelParts.Count - 1)] -join '').Replace(' ', '')
+                  }
+                  Default {
+                      # $make = $makeModelParts[0].Replace(' ', '')
+                      # $model = ($makeModelParts[1..($makeModelParts.Count - 1)] -join '').Replace(' ', '')
+                      Write-Error "Error: Unexpected number of items in \$($makeModelParts): $($makeModelParts.Count)"
+                  }
+              }
+          }
+          
+          $repoIsPlugin = $false
+          if($model -eq '') {
+              # assume non-plugin repo && name override is automatically generated
+              $title = $make
+              $package = $title -replace ' ', ''
+              $repoIsPlugin = $false
+          }
+          else {
+              # TODO [ ] review for standardization - original title implementation
+              $title = (Get-Culture).TextInfo.ToTitleCase("$make") + (Get-Culture).TextInfo.ToTitleCase("$model")
+              
+              # TODO [ ] review for standardization - 4series uses `$make.$model`
+              #$title = (Get-Culture).TextInfo.ToTitleCase("$make.$model")
+              
+              # TODO [ ] review for standardization - 4series build uses `Plugins`
+              $package = "PepperDash.Essentials.Plugin." + ($title -replace ' ', '')
+              $repoIsPlugin = $true
+          }
 
           Write-Output "Repo Full Name: $repoFullName"
           Write-Output "Repo Name: $repoName"
           Write-Output "Repo is Plugin: $repoIsPlugin"
+          Write-Output "Make: $make"
+          Write-Output "Model: $model"
+          Write-Output "Title: $title"
+          Write-Output "Package: $package"
 
           Write-Output "REPO_FULL_NAME=$repoFullName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           Write-Output "REPO_NAME=$repoName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           Write-Output "REPO_IS_PLUGIN=$repoIsPlugin" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-
+          Write-Output "EPI_TITLE=$title" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Output "EPI_PACKAGE=$package" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
                   
 
       # Build the solution using the docker image
@@ -146,13 +198,12 @@ jobs:
           $package = $Env:EPI_PACKAGE
           $version = $Env:VERSION
           $plugin = ($Env:REPO_IS_PLUGIN).ToLower()
-          $buildDir = "\\bin\\"
 
           # Define the target file extensions (with leading dot)
-          $validExtensions = @(".cpz", ".clz")
-
+          $validExtensions = @(".cpz", ".clz", ".cplz")
+                    
           # Create the include patterns for Get-ChildItem -Include
-          $includePatterns = $validExtensions | ForEach-Object { "*$_" }                    
+          $includePatterns = $validExtensions | ForEach-Object { "*$_" }
 
           Write-Output "Target File Extensions: $($validExtensions -join ', ')"
           Write-Output "Include Patterns: $($includePatterns -join ', ')"
@@ -164,54 +215,48 @@ jobs:
           Write-Output "`n"
 
           # Create the destination directory if it doesn't exist.
+          Write-Output "Creating destination directory if it doesn't exist..."
           if (Test-Path -Path $destinationDir) {
-              Write-Output "Destination '$destinationDir' already exists. Deleting contents..."
+              Write-Output "Destination directory already exists. Deleting contents..."
               Get-ChildItem -Path $destinationDir | Remove-Item -Force
               Write-Output "`n"
           }
           else {
-              Write-Output "Destination '$destinationDir' does not exist. Creating it..."
+              Write-Output "Destination directory does not exist. Creating it..."
               New-Item -ItemType Directory -Force -Path $destinationDir
               Write-Output "`n"
           }
-
-          switch -Wildcard ($env:REPO_FULL_NAME.ToLower()) {
-              "pepperdash/essentials" {
-                  $validExtensions += @(".dll")
-                  $includePatterns += @("*.dll")
-              }
-              "pepperdash/pepperdashcore" {
-                  
-              }
-          }
+          
 
           Write-Output "`n"
           Write-Output "Source Directory Contents:"
           Get-ChildItem -Path $sourceDir | ForEach-Object { Write-Output $_.FullName }
 
-          Write-Output "Searching for nuspec files in $sourceDir..."
-          # Search the $sourceDir for any file with extension *.nuspec and copy to the $destinationDir
-          Get-ChildItem -Path $sourceDir -Recurse | Where-Object { 
-              $_.Extension -eq ".nuspec" 
-          } | ForEach-Object {
-              Write-Output "Copying $($_.Name) to $destinationDir"
-              $_ | Copy-Item -Destination .\ -Force
-              $nuspec_file = $_.BaseName
-              Write-Output "Nuspec File: $nuspec_file"
-              Write-Output "NUSPEC_FILE=$($nuspec_file)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          if($plugin -eq 'False') {
+              Write-Output "`n"
+              Write-Output "Searching for nuspec files in $sourceDir..."
+              # Search the $sourceDir for any file with extension *.nuspec and copy to the $destinationDir
+              Get-ChildItem -Path $sourceDir -Recurse | Where-Object { 
+                  $_.Extension -eq ".nuspec" 
+              } | ForEach-Object {
+                  Write-Output "Copying $($_.Name) to .\"
+                  $_ | Copy-Item -Destination .\ -Force
+                  $nuspec_file = $_.BaseName
+                  Write-Output "Nuspec File: $nuspec_file"
+                  Write-Output "NUSPEC_FILE=$($nuspec_file)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+              }
           }
 
           Write-Output "`n"
-          Write-Output "$sourceDir Directory Contents:"
-          Get-ChildItem -Path "$sourceDir" -Recurse | Where-Object { 
-              # $_.FullName -contains "$($buildDir -replace '\\', '\\\\')" -and $_.FullName -notmatch "\\packages\\" -and $validExtensions -contains $_.Extension
-              $_.FullName -notmatch "\\packages\\" -and $validExtensions -contains $_.Extension
+          Write-Output "\bin\$($env:BUILD_TYPE) Directory Contents:"
+          Get-ChildItem -Path $sourceDir -Recurse | Where-Object { 
+              $_.FullName -match "\\bin\\$($Env:BUILD_TYPE)" 
           } | ForEach-Object { Write-Output $_.FullName }
 
           # Find files recursively in the source directory with the specified extensions
           # $filesToCopy = Get-ChildItem -Path $sourceDir -Recurse -Include $includePatterns | Where-Object { -not $_.FullName.Contains("\packages\") }
           $filesToCopy = Get-ChildItem -Path $sourceDir -Recurse -Include $includePatterns | Where-Object { 
-              -not $_.FullName.Contains("\\packages\\") -and $_.FullName -match "$buildDir" 
+              -not $_.FullName.Contains("\packages\") -and $_.FullName -match "\\bin\\$($Env:BUILD_TYPE)" 
           }
 
           # Create a list to store all files to copy, including matching base name files
@@ -227,7 +272,7 @@ jobs:
 
               # Search for any files in $sourceDir with a matching base name or matching the EPI package name
               $matchingFiles = Get-ChildItem -Path $sourceDir -Recurse | Where-Object { 
-                  $_.BaseName -eq $baseName -and $_.Extension -eq ".dll" 
+                  ($_.BaseName -eq $baseName -or $_.BaseName -eq $package) -and $_.Extension -eq ".dll" 
               }
 
               # Add the matching files to the list
@@ -258,21 +303,16 @@ jobs:
           Write-Output "`n"
           Write-Output "Renaming files in $destinationDir to include version '$version'..."
 
-          $validExtensions.Clear()
-          $validExtensions += @(".cpz", ".clz")
           # Rename the copied files in the destination directory
-          Write-Host "Valid Extensions: $($validExtensions -join ', ')"
+          $validExtensions += @(".dll")
           Get-ChildItem -Path $destinationDir | Where-Object { $validExtensions -contains $_.Extension } | ForEach-Object {
-              if($_.Name -match "PepperDashEssentials" -or $_.Name -match "PepperDashCore" -or $_.Name -match "PepperDash_Core") {        
-                  # Remove the version number from the file name
-                  $oldName = $_.Name
-                  $baseName = $_.BaseName
-                  $extension = $_.Extension # Includes the dot (.)
-                  $newName = "$baseName.$version$extension" -Replace '.3Series', ''
-                                      
-                  Write-Output "- '$oldName' to '$newName'"    
-                  Rename-Item -Path $_.FullName -NewName $newName -Force    
-              }
+              $oldName = $_.Name
+              $baseName = $_.BaseName
+              $extension = $_.Extension # Includes the dot (.)
+              $newName = "$baseName.$version$extension" -Replace '.3Series', ''
+                        
+              Write-Output "- '$oldName' to '$newName'"    
+              Rename-Item -Path $_.FullName -NewName $newName -Force 
           }
 
           Write-Output "`n"
@@ -284,7 +324,7 @@ jobs:
           Get-ChildItem -Path $destinationDir | ForEach-Object {
               Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "- $($_.Name)`n"
           }
-
+        
       # Remove any existing nuspec files and create a new one
       - name: Create Nuspec File
         shell: pwsh
@@ -339,13 +379,13 @@ jobs:
       
       # Pulls the nuget builder packages
       - name: Add nuget.exe
-        if: ${{ !contains( env.NUSPEC_FILE, 'EssentialsPluginTemplate' ) }}
+        if: contains( env.NUSPEC_FILE, 'EssentialsPluginTemplate' )
         uses: nuget/setup-nuget@v2        
       
         # Creating nuget Packages
       - name: Create nuget package
         shell: pwsh
-        if: ${{ !contains( env.NUSPEC_FILE, 'EssentialsPluginTemplate' ) }}
+        if: contains( env.NUSPEC_FILE, 'EssentialsPluginTemplate' ) == false
         run: |
           $filePath = ".\${{ env.NUSPEC_FILE }}.nuspec"
           
@@ -367,8 +407,9 @@ jobs:
           
           if (-not (Test-Path -Path ".\output\*.nupkg")) {
             $msg = "No NuGet package found in the output directory. Check if the build process created the package correctly."
-            Write-Error $msg | Add-Content -Path $env:GITHUB_STEP_SUMMARY
-            exit 1
+            Write-Error $msg
+            Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value $msg
+            exit 0
           }          
           if (-not (nuget sources list | Select-String -Pattern "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json")) {
             nuget sources add -name github -source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
@@ -381,6 +422,7 @@ jobs:
       # Pushes to nuget.org Only if the repo is public and the owner is PepperDash
       - name: Publish to Nuget.org
         shell: pwsh
+        # if: github.repository_owner == 'PepperDash' && github.event.repository.visiblity == 'public'
         run: |
           Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "### Nuget.org`n"
           
