fix: update 3series workflows to use self-hosted runners
- Deleted the self-hosted workflow for Essentials Plugin 3-Series builds.
- Updated the main Essentials Plugin 3-Series build workflow to use a self-hosted runner group.
- Refactored the Essentials Plugin builds workflow to use a self-hosted runner group.
- Removed the self-hosted workflow for Plugin Builder 1.x.
- Consolidated build steps and improved environment variable handling across workflows.

--- a/.github/workflows/essentials-3Series-builds.yml
+++ b/.github/workflows/essentials-3Series-builds.yml
@@ -24,7 +24,9 @@ permissions:
   packages: write
 jobs:
   Build_Project_3-Series:
-    runs-on: windows-2019
+    name: Build Essentials and Core 1.x
+    runs-on: 
+      group: dmz-windows-2019
     env:
       VERSION: ${{ inputs.version }}
       BUILD_TYPE: ${{ inputs.channel == '' && 'Release' || 'Debug' }}
