--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -24,7 +24,9 @@ permissions:
   packages: write
 jobs:
   Build_Project_3-Series:
-    runs-on: windows-2019
+    name: Build Essentials 1.x Plugin
+    runs-on: 
+      group: dmz-windows-2019
     env:
       VERSION: ${{ inputs.version }}
       BUILD_TYPE: ${{ inputs.channel == '' && 'Release' || 'Debug' }}
