--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -418,8 +418,16 @@ jobs:
           if (-not (nuget sources list | Select-String -Pattern "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json")) {
             nuget sources add -name github -source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
           }
-          nuget push .\output\*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }}
+          # Find the .nupkg file(s) in the output directory
+          $nupkgFiles = Get-ChildItem -Path .\output\*.nupkg
+          if ($nupkgFiles.Count -eq 0) {
+          Write-Error "No .nupkg files found in the output directory."
+            exit 1
+          }
+          Write-Output "Found the following .nupkg file(s) to push to GitHub feed:"
+          $nupkgFiles | ForEach-Object { Write-Output $_.FullName }
 
+          nuget push .\output\*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }}
           
           Write-Output "Publishing ${{ github.repository }} to GitHub feed" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
 
